--- a/test/fixtures/types.yml
+++ b/test/fixtures/types.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
+book:
+  name: books
 
-two:
-  name: MyString
+toy:
+  name: toys
