--- a/test/fixtures/addresses.yml
+++ b/test/fixtures/addresses.yml
@@ -1,7 +1,7 @@
  # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 my_address:
-  street: Gsiorowo
+  street: Gasiorowo
   city: Olsztynek
   zip_code: 11-015
 
