--- a/test/fixtures/storages.yml
+++ b/test/fixtures/storages.yml
@@ -2,8 +2,8 @@
 
 house:
   name: my house
-  address_id: 1
+  address_id: my_address
 
 rental_place:
   name: friend house
-  address_id: 1
+  address_id: address_of_friend
