--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,10 +4,10 @@ owner:
   first_name: Ada
   last_name: Kucinska
   age: 24
-  address_id: 1
+  address_id: my_address
 
 friend:
   first_name: Adam
   last_name: Kucinski
   age: 4
-  address_id: 1
+  address_id: address_of_friend
