--- a/test/fixtures/types.yml
+++ b/test/fixtures/types.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-book:
-  name: books
+book_too_long_name:
+  name: books from library
 
 toy:
   name: toys
