--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -12,13 +12,13 @@ friend:
   age: 4
   address_id: address_of_friend
 
-to_short_first_name:
+too_short_first_name:
   first_name: Jo
   last_name: Snow
   age: 34
   address_id: address_of_friend
 
-to_short_last_name:
+too_short_last_name:
   first_name: Johm
   last_name: Sn
   age: 36
