--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -1,11 +1,9 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+owners_account:
+  email: ada@ada.com
+  password_digest: <%= BCrypt::Password.create('secret123') %>
+  user: owner 
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+friends_account:
+  email: ola@ola.com
+  password_digest: <%= BCrypt::Password.create('secret') %>
+  user: friend
