--- a/config/database.yml
+++ b/config/database.yml
@@ -17,15 +17,15 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: <%= ENV["DB_USERNAME"] %>
+  password: <%= ENV["DB_PASSWORD"] %>
   # For details on connection pooling, see Rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
   <<: *default
-  database: web_treasures_development
-  username: web_treasures
-  password: ssecret
+  database: web_treasures_dev
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
